--- a/financeCalc/main/main.vcxproj
+++ b/financeCalc/main/main.vcxproj
@@ -148,8 +148,12 @@
   <ItemGroup>
     <ClInclude Include="dataManip.h" />
     <ClInclude Include="linkedList.h" />
-    <ClInclude Include="menus.h" />
-    <ClInclude Include="stdafx.h" />
+    <ClInclude Include="menus.h">
+      <DeploymentContent>true</DeploymentContent>
+    </ClInclude>
+    <ClInclude Include="stdafx.h">
+      <DeploymentContent>true</DeploymentContent>
+    </ClInclude>
     <ClInclude Include="structure1.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
