--- a/financeCalc/main/main.vcxproj
+++ b/financeCalc/main/main.vcxproj
@@ -154,7 +154,9 @@
     <ClInclude Include="stdafx.h">
       <DeploymentContent>true</DeploymentContent>
     </ClInclude>
-    <ClInclude Include="structure1.h" />
+    <ClInclude Include="structure1.h">
+      <DeploymentContent>true</DeploymentContent>
+    </ClInclude>
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
