linked list again

--- a/financeCalc/main/main.vcxproj
+++ b/financeCalc/main/main.vcxproj
@@ -162,7 +162,9 @@
   <ItemGroup>
     <ClCompile Include="dataManip.cpp" />
     <ClCompile Include="linkedList.cpp" />
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="main.cpp">
+      <DeploymentContent>true</DeploymentContent>
+    </ClCompile>
     <ClCompile Include="menus.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="structure1.cpp" />
