added a stack to the program that is 90% ready as the linked list

--- a/financeCalc/main/main.vcxproj
+++ b/financeCalc/main/main.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="menus.h">
       <DeploymentContent>true</DeploymentContent>
     </ClInclude>
+    <ClInclude Include="stack.h" />
     <ClInclude Include="stdafx.h">
       <DeploymentContent>true</DeploymentContent>
     </ClInclude>
@@ -166,6 +167,7 @@
       <DeploymentContent>true</DeploymentContent>
     </ClCompile>
     <ClCompile Include="menus.cpp" />
+    <ClCompile Include="stack.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="structure1.cpp" />
   </ItemGroup>
